# synth-ecg

./: .gitignore  LICENSE  README.md  pyproject.toml
ecg_gen/: ecg_reshape.py  narsil1.sh  tools.py  vcg.py
src/synth_ecg/: generate_ecgs.py  generator.py
src/synth_ecg/configs/: gen_small_test_set.yaml  generate_ecgs.yaml
src/synth_ecg/utils/: tools.py  vcg_perturbations.py
src/synth_ecg_gen/: generate_ecgs.py  generator.py
src/synth_ecg_gen/configs/: generate_ecgs.yaml  vcg_large.ipynb
src/synth_ecg_gen/utils/: ecg_perturbations.py  perturb_ecg.py  tools.py  vcg.py
