[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synth-ecg"
version = "0.0.0a1"
description = "A tool for generating synthetic ecgs."

readme = "README.md"
requires-python = ">=3.12"
dependencies = [ "numpy", "pandas", "scipy", "hydra-core"]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = ["pre-commit"]
tests = ["pytest", "pytest-cov", "rootutils"]
logging = ["loguru"]
viz = ["matplotlib", "seaborn"]

[[project.authors]]
name="Teya Bergamaschi"
email="teyabergamaschi@gmail.com"

[project.license]
file = "LICENSE"

[tool.setuptools_scm]

[project.scripts]
synth-ecg-gen = "synth_ecg.generate_ecgs:main"
